# api/openapi.yaml
@@ -123,6 +123,48 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /events/filters/day/{day}:
+    description: A path for all events
+    get:
+      summary: Return a list of events
+      responses:
+        200:
+          description: A JSON array of events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+
+  /events/filters/month/{month}:
+    description: A path for all events
+    get:
+      summary: Return a list of events
+      responses:
+        200:
+          description: A JSON array of events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+
+  /events/filters/year/{year}:
+    description: A path for all events
+    get:
+      summary: Return a list of events
+      responses:
+        200:
+          description: A JSON array of events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+
 components:
   schemas:
     createEvent:
