# cmd/main.go
@@ -41,5 +41,9 @@ func serve() {
 	r.Put("/api/events/{id}", handlers.UpdateEventHandler)
 	r.Delete("/api/events/{id}", handlers.DeleteEventHandler)
 
+	r.Get("/api/events/filters/day/{day}", handlers.GetEventsByDay)
+	r.Get("/api/events/filters/month/{month}", handlers.GetEventsByMonth)
+	r.Get("/api/events/filters/year/{year}", handlers.GetEventsByYear)
+
 	log.Fatal(http.ListenAndServe(":8080", r))
 }
